# nervcores-app

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  paxi_pioneers.wasm
paxi-mint-frontend/: build-bundle.mjs  bundle-loader.html  bundle.js  index.html  package-lock.json  package.json
paxi-mint-frontend/src/: bundle-entry.js
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
