[package]
name = "paxi-pioneers"
version = "0.1.0"
authors = ["Paxi Labs <dev@paxi>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable Stargate features for wasm
stargate = [
  "cosmwasm-std/stargate",
]
iterator = [
  "cw-storage-plus/iterator",
]

default = ["stargate", "iterator"]

[dependencies]
cosmwasm-std = { version = "1.5.2", features = ["stargate"] }
cosmwasm-schema = "1.5.2"
cosmwasm-storage = "1.5.2"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cw-utils = "1.0.3"
cw721 = { version = "0.18.0" }
cw721-base = { version = "0.18.0", default-features = false, features = ["library"] }
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"

[dev-dependencies]
cosmwasm-schema = "1.5.2"

[package.metadata.scripts]
optimize = "docker run --rm -v $(pwd):/code --platform linux/amd64 -e RUSTFLAGS='-C target-feature=-bulk-memory' cosmwasm/rust-optimizer:0.17.0"
